# adv_random

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: default_random.rs  lib.rs  mod.rs  random.rs  random_trait.rs  settings.rs  tests.rs
src/rules/: exclude_number_sets.rs  exclude_rule_trait.rs  mod.rs  no_duplicates.rs  number_pool.rs  number_pool_by_index.rs  number_range.rs  number_space.rs  odd_even.rs  odd_even_by_index.rs  random_number.rs  rule_trait.rs  sequential.rs
