[package]
name = "adv_random"
version = "2.1.0"
authors = ["Mark Davis <markeyd83@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mdavisJr/adv_random"
description = "Create random numbers, passwords, or strings based on rules"
keywords = ["rand", "random", "rule", "string", "password"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
once_cell = "^1.17"
rand = { version = "^0", optional = true }

[features]
default = ["rand"]
rand = ["dep:rand"]

